[package]
name = "semicircle"
version = "0.1.0"
edition = "2018"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>"
]
description = "Framework for creating custom RADIUS servers"
repository = "https://github.com/vorot93/semicircle"
license = "MIT"

[dependencies]
async-trait = "*"
byteorder = "*"
radius-parser = { git = "https://github.com/rusticata/radius-parser" }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
