[package]
name = "semicircle"
version = "0.1.0"
edition = "2024"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>"
]
description = "Framework for creating custom RADIUS servers"
repository = "https://github.com/vorot93/semicircle"
license = "MIT"

[dependencies]
async-trait = "0.1"
radius-parser = "0.5"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
